fix(steps): #566, update steps footer btns gap to 12px (#567)

--- a/theme/dt-theme/dark/steps.less
+++ b/theme/dt-theme/dark/steps.less
@@ -82,7 +82,7 @@
                 left: 0;
                 right: 0;
                 .ant-btn {
-                    margin-left: 10px;
+                    margin-left: 12px;
                 }
             }
         }
