--- a/theme/dt-theme/default/steps.less
+++ b/theme/dt-theme/default/steps.less
@@ -89,7 +89,7 @@
                 left: 0;
                 right: 0;
                 .ant-btn {
-                    margin-left: 10px;
+                    margin-left: 12px;
                 }
             }
         }
